--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,41 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 project(en605.617-project LANGUAGES C CXX CUDA)
 
-# enabling & configuring one of these might help if there are issues finding fftw3
-# in theory, these can also be appended when calling cmake as well
-# see: https://stackoverflow.com/a/44489201
-#set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH}:/path/to/fftw/pkgconfig")
-#set(ENV{PKG_CONFIG_PATH} "${ENV{PKG_CONFIG_PATH}}:/path/to/fftw/pkgconfig")
+find_program(CCACHE_FOUND ccache)
+if(CCACHE_FOUND)
+  set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+endif(CCACHE_FOUND)
 
-find_package(PkgConfig REQUIRED)
-pkg_search_module(FFTW REQUIRED fftw3 IMPORTED_TARGET)
-include_directories(PkgConfig::FFTW)
-link_libraries     (PkgConfig::FFTW)
+include(FetchContent)
+include(ExternalProject)
+
+# use externalProject instead of fetchContent because fftw's cmake configuration is trash
+# (externalProject allows us to customize configure/make/make install whereas fetchcontent assumes cmake targets only)
+ExternalProject_Add(
+    fftw
+    URL http://fftw.org/fftw-3.3.10.tar.gz
+    CONFIGURE_COMMAND <SOURCE_DIR>/configure --prefix=<INSTALL_DIR> --enable-shared --enable-threads 
+)
+
+FetchContent_Declare(
+    audiofile
+    GIT_REPOSITORY https://github.com/adamstark/AudioFile.git
+    GIT_TAG 1.1.0
+)
+
+set(FFTW_ENABLE_THREADS ON)
+
+FetchContent_MakeAvailable(audiofile)
 
 # globally enable separable compilation
 set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
 
-add_executable(en605.617-project fftw_driver.c)
+add_executable(en605.617-project fftw_driver.cpp)
+
+# manually identify the fftw installation
+ExternalProject_Get_Property(fftw INSTALL_DIR)
+target_include_directories(en605.617-project PRIVATE ${INSTALL_DIR}/include)
+target_link_directories(en605.617-project PRIVATE ${INSTALL_DIR}/lib)
+target_link_libraries(en605.617-project PRIVATE AudioFile fftw3_threads fftw3 m)
+
+add_dependencies(en605.617-project fftw)
