--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,6 @@
 add_subdirectory(fftw)
 add_subdirectory(cuda)
 
-add_executable(en605.617-project main.cpp hann.cpp)
+add_executable(en605.617-project main.cu hann.cpp timer.cu)
 
 target_link_libraries(en605.617-project fftw_benchmark cuda_benchmark)
