add initial construction of the fftw fft performer class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@
 
 add_subdirectory(fftw)
 add_subdirectory(cuda)
+add_subdirectory(io)
 
 add_executable(en605.617-project main.cu hann.cpp cuda_utilities.cu)
 
