make a bunch of progress on getting the initial code structure going

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,8 @@
 add_subdirectory(fftw)
 add_subdirectory(cuda)
 add_subdirectory(io)
+add_subdirectory(utils)
 
-add_executable(en605.617-project main.cu hann.cpp cuda_utilities.cu)
+add_executable(en605.617-project main.cu cuda_utilities.cu)
 
 target_link_libraries(en605.617-project fftw_benchmark cuda_benchmark)
