--- a/src/fftw/CMakeLists.txt
+++ b/src/fftw/CMakeLists.txt
@@ -14,5 +14,5 @@ ExternalProject_Get_Property(fftw INSTALL_DIR)
 # the executable needs to know where to find libs to link
 target_link_directories(fftw_benchmark PUBLIC ${INSTALL_DIR}/lib)
 target_include_directories(fftw_benchmark PRIVATE ${INSTALL_DIR}/include)
-target_link_libraries(fftw_benchmark fftw3_threads fftw3 m io)
+target_link_libraries(fftw_benchmark fftw3_threads fftw3 m io utils)
 add_dependencies(fftw_benchmark fftw)
