--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,8 +30,9 @@
 	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust
 	// "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
 	"runArgs": [
-		"--userns=keep-id",
-		"--security-opt", "label=disable", "--hooks-dir=/usr/share/containers/oci/hooks.d", // this enables gpus in the container
+		// "--userns=keep-id",
+		// "--security-opt", "label=disable", "--hooks-dir=/usr/share/containers/oci/hooks.d", // this enables gpus in the container
+		"--gpus=all"
 	],
 
 	// Uncomment to use the Docker CLI from inside the container. See https://aka.ms/vscode-remote/samples/docker-from-docker.
