--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,11 +21,20 @@ FetchContent_Declare(
     GIT_TAG 1.16.0
 )
 
+# FetchContent_Declare(
+#     opencv
+#     GIT_REPOSITORY https://github.com/opencv/opencv.git
+#     GIT_TAG 4.5.5
+# )
+
 FetchContent_MakeAvailable(audiofile thrust)
 
 find_package(Thrust REQUIRED CONFIG)
 thrust_create_target(Thrust)
 
+# set(OpenCV_DIR ${CMAKE_CURRENT_BINARY_DIR})
+# find_package(OpenCV REQUIRED)
+# include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_subdirectory(fftw)
 add_subdirectory(cuda)
@@ -33,8 +42,8 @@ add_subdirectory(io)
 
 add_executable(en605.617-project main.cu cuda_utilities.cu)
 
-target_link_libraries(en605.617-project fftw_benchmark cuda_benchmark)
+target_link_libraries(en605.617-project fftw_benchmark cuda_benchmark AudioFile)
 # TODO do we want to read the file in initially, and then just pass around the samples pointers for use?
 # or do we want data to be controlled in the performers?
 # the answer to that determines if we need this link here
-target_link_libraries(en605.617-project AudioFile)
+# target_link_libraries(en605.617-project opencv_imgproc)
