--- a/src/cuda/CMakeLists.txt
+++ b/src/cuda/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(cuda_benchmark cuda_driver.cu CUFFTPerformer.cu GPUSamples.cu)
-target_link_libraries(cuda_benchmark cufft AudioFile)
+add_library(cuda_benchmark CUFFTPerformer.cu GPUSamples.cu)
+target_link_libraries(cuda_benchmark cufft AudioFile Thrust m)
