--- a/src/fftw/CMakeLists.txt
+++ b/src/fftw/CMakeLists.txt
@@ -8,7 +8,7 @@ ExternalProject_Add(
 )
 
 # these "libraries" are really jsut consolidated targets for compilation, rather than intended to be standalone
-add_library(fftw_benchmark fftw_driver.cpp FFTWPerformer.cu CPUSamples.cu)
+add_library(fftw_benchmark FFTWPerformer.cu CPUSamples.cu)
 
 # find_package(CUDA REQUIRED)
 # find_package(Thrust REQUIRED CONFIG)
@@ -20,5 +20,5 @@ ExternalProject_Get_Property(fftw INSTALL_DIR)
 # the executable needs to know where to find libs to link
 target_link_directories(fftw_benchmark PUBLIC ${INSTALL_DIR}/lib)
 target_include_directories (fftw_benchmark PUBLIC ${INSTALL_DIR}/include)
-target_link_libraries(fftw_benchmark fftw3_threads fftw3 m AudioFile io Thrust)
+target_link_libraries(fftw_benchmark fftw3_threads fftw3 m AudioFile Thrust)
 add_dependencies(fftw_benchmark fftw)
