--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,6 +30,7 @@
 	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust
 	// "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
 	"runArgs": [
+		// If running on podman instead of docker, uncommented the commented stuff, and comment the uncommented line
 		// "--userns=keep-id",
 		// "--security-opt", "label=disable", "--hooks-dir=/usr/share/containers/oci/hooks.d", // this enables gpus in the container
 		"--gpus=all"
